; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_CmdPromptChoosePassword.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_CmdPromptChoosePassword.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CmdPromptChoosePassword(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32* null, i32** %3, align 8
  br label %23

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i8* @CmdPasswordPrompt(i32* %12)
  store i8* %13, i8** %6, align 8
  %14 = load i8*, i8** %6, align 8
  %15 = icmp eq i8* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %11
  store i32* null, i32** %3, align 8
  br label %23

17:                                               ; preds = %11
  %18 = load i8*, i8** %6, align 8
  %19 = call i32* @CopyStrToUni(i8* %18)
  store i32* %19, i32** %7, align 8
  %20 = load i8*, i8** %6, align 8
  %21 = call i32 @Free(i8* %20)
  %22 = load i32*, i32** %7, align 8
  store i32* %22, i32** %3, align 8
  br label %23

23:                                               ; preds = %17, %16, %10
  %24 = load i32*, i32** %3, align 8
  ret i32* %24
}

declare dso_local i8* @CmdPasswordPrompt(i32*) #1

declare dso_local i32* @CopyStrToUni(i8*) #1

declare dso_local i32 @Free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
